Fix navbar-toggler bug: now visible also on narrow windows/mobile

--- a/blog/static/blog/css/styles.css
+++ b/blog/static/blog/css/styles.css
@@ -3,6 +3,15 @@
     background-color: transparent; /* Set navbar background to transparent */
 }
 
+/* Hamburger menu styles */
+.navbar-toggler {
+    color:white; /* Make the border of the hamburger button white */
+}
+
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
 /* Body styles */
 body {
     background-image: 
